# pivx-name-prover

./: .gitignore  Cargo.toml  README.md
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
script/src/: main.rs
