[package]
version = "0.1.0"
name = "pins-script"
edition = "2021"

[dependencies]
# --- Core SP1 SDK ---
sp1-sdk = { version = "6.2.2", features = ["network"] }

# --- Data Serialization (Optimized for standard OS) ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

# --- Smart Contract Integration ---
alloy-sol-types = "1.6"
hex = "0.4"

# --- CLI & Async Runtime ---
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# --- Logging & Tracing ---
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[build-dependencies]
sp1-build = { version = "6.2.2" }
